@@ -64,7 +64,7 @@ public class IKHandlerCache implements IKHandler {
 					cache.put(key,
 							deserializeIKStorageValueSupported(cache) ? new IKStorageValue(IKStorageScopeSupport.prepareToStore(data, existingVal, storageScope.lastModified()))
 									: IKStorageValue.toByteRepresentation(IKStorageScopeSupport.prepareToStore(data, existingVal, storageScope.lastModified())),
-							new Long(storageScope.getTimeSpan()), null);
+							Long.valueOf(storageScope.getTimeSpan()), null);
 				}
 				else if (existingVal != null) {
 					cache.remove(key);
